--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
         
         <script type="text/javascript" src="js/jquery-3.1.0.js"></script>
         <script type="text/javascript" src="js/bootstrap.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
         <script src="js/angular.js"></script>
         
         <script src="js/angular-route.js"></script>
