--- a/public/cart.html
+++ b/public/cart.html
@@ -1,16 +1,16 @@
 <div class="container" ng-controller="cartController">
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h3 align="center">WISHLIST ITEMS</h3>
+            <h3 align="center">CART ITEMS</h3>
         </div>
         <div class="panel-body">
             <table class="table">
                 <tr>
-                    <th>item image</th>
-                    <th>name</th>
-                    <th>price/quantity</th>
-                    <th>quantity</th>
-                    <th>Delete</th>
+                    <th>Item image</th>
+                    <th>Name</th>
+                    <th>Price</th>
+                    <th>Quantity</th>
+                    <th>Remove</th>
                 </tr>
                 <tbody class="table-hover">
                     <tr ng-repeat="prod in cartProducts">
