--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span> 
                     </button>
-                    <a  href="#!/" class="navbar-brand">My App</a>
+                    <a  href="#!/" class="navbar-brand"><img id="logo" src="img/logo2.png"/></a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
