--- a/public/homepage.html
+++ b/public/homepage.html
@@ -94,13 +94,16 @@
                             </ul> 
 
                         </div>
-                    </div>  
-                    <input type="search" name="searchBy" id="searchBy" class="form-control" placeholder="search in all categories" ng-model="nameItem" required/>
-                    <span class="input-group-btn">
-                        <button id="filter" class="btn btn-info btn-block" ng-click="searchProducts()">
-                            <span class="glyphicon glyphicon-search"></span>
-                        </button>
-                    </span>
+                    </div>
+                    <form>
+                        <input type="search" name="searchBy" id="searchBy" class="form-control" placeholder="search in all categories" ng-model="nameItem" required/>
+                            <span class="input-group-btn">
+                                <button type="submit" class="btn btn-info btn-block" ng-click="searchProducts()">
+                                    <span class="glyphicon glyphicon-search"></span>
+                                </button>
+                            </span>
+                    </form>
+                    
                 </div>
             </div>
         </div>
