--- a/public/homepage.html
+++ b/public/homepage.html
@@ -146,7 +146,7 @@
     </div>
 
     <div class="row">
-        <div style="min-height:370px" class="col-xs-6 col-sm-4 col-md-4 col-lg-3" ng-repeat="prod in search|
+        <div id="searchdiv" class="col-xs-6 col-sm-4 col-md-4 col-lg-3" ng-repeat="prod in search|
                                                                 offset: currentPage*itemsPerPage |
                                                                 limitTo: itemsPerPage">
             <div class="thumbnail">
