--- a/public/index.html
+++ b/public/index.html
@@ -190,10 +190,10 @@
         
         <nav id="topbar" align=right>
             <div id="toprow">
-                <a href="http://www.facebook.com"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
-                <a href="http://www.twitter.com"><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
-                <a href="http://www.google.com"><i id="social-gp" class="fa fa-google-plus-square fa-3x social"></i></a>
-                <a href="http://www.gmail.com"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
+                <a target="_blank" href="http://www.facebook.com"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
+                <a target="_blank" href="http://www.twitter.com"><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
+                <a target="_blank"href="http://www.google.com"><i id="social-gp" class="fa fa-google-plus-square fa-3x social"></i></a>
+                <a target="_blank" href="http://www.gmail.com"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
             </div>
         </nav>
         
