--- a/public/checkout.html
+++ b/public/checkout.html
@@ -14,13 +14,13 @@
         </div>
 <div class="panel-body" >
   
- <table class="table">
+ <table class="table table-hover">
         <thead>
         <tr>
         
-            <th>Product Name</th>               
-            <th>Quantity</th>
-            <th>Price</th>
+            <td>Product Name</td>               
+            <td>Quantity</td>
+            <td>Price</td>
             
         </tr>
         </thead>
